# Mass-x-Velocity

./: README.md
MxV/: main.py  pyproject.toml
MxV/backend/: app.py
MxV/backend/database/: __init__.py  create_db.py  insert_db.py  select_db.py
MxV/backend/forms/: __init__.py  log_in.py  sign_up.py
MxV/backend/instance/: data.db
MxV/backend/routes/: __init__.py  index.py  join.py
MxV/backend/services/: __init__.py  join_service.py
MxV/backend/static/css/: index.css  styles.css
MxV/backend/static/js/: index.js
MxV/backend/templates/: base.html  index.html
