[project]
name = "mxv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "pytest>=9.0.1",
    "pytest-mock>=3.15.1",
    "sqlalchemy>=2.0.44",
]
